# basic_cpp_project_setup

./: .ccls  .gitignore  CMakeLists.txt  README.md  copy_to_local.sh
src/: Example.cpp  Example.hpp
test/: CMakeLists.txt  ExampleTests.cpp
